--- a/index.html
+++ b/index.html
@@ -83,6 +83,9 @@
 		<main>
 			<ul>
 				<li>
+					<a target="_blank" href="./lesson17/index.html">Домашні завдання (Урок № 17).</a>
+				</li>
+				<li>
 					<a target="_blank" href="./lesson16/index.html">Домашні завдання (Урок № 16).</a>
 				</li>
 				<li>
