fill links by description

--- a/lesson17/index.html
+++ b/lesson17/index.html
@@ -76,19 +76,30 @@
 		<h1>Домашні завдання (Урок 17).</h1>
 		<ol>
 			<li>
-				<a target="_blank" href="./tasks/task01.html">Задача 1. .</a>
+				<a target="_blank" href="./tasks/task01.html">Задача 1. Створити клас, що дозволяє виконувати такі операції над
+					масивами: знаходження кількості додатних, кількості від’ємних,
+					кількість входжень деякого числа (статичні методи).</a>
 			</li>
 			<li>
-				<a target="_blank" href="./tasks/task02.html">Задача 2. .</a>
+				<a target="_blank" href="./tasks/task02.html">Задача 2. Створити службове авто (водій, марка, номер). Створити
+					клас таким чином, щоб можна було створити тільки один екземпляр цього класу.</a>
 			</li>
 			<li>
-				<a target="_blank" href="./tasks/task03.html">Задача 3. .</a>
+				<a target="_blank" href="./tasks/task03.html">Задача 3.Створити клас Нагадувач. Кожні вказані кількості секунд
+					(використати setInterval) програма нагадує про якусь подію (це просто текст) і також виводиться порядковий
+					номер скільки раз вже нагадування було. Зробити так, щоб неможна було зробити одночасно декілька
+					об’єктів-нагадувачів. Методи зупинки таймера, метод зміни повідомлення без зупинки таймера.</a>
 			</li>
 			<li>
-				<a target="_blank" href="./tasks/task04.html">Задача 4. .</a>
+				<a target="_blank" href="./tasks/task04.html">Задача 4. Особиста бібліотека. Картотека домашньої бібліотеки:
+					дані книги (автори (піб, рік народження, короткий опис), назва книги, жанр, видавництво (назва, реєстраційний
+					номер, рік засування)). Реалізувати розділи бібліотеки організувати додавання/вилучення книг та вибір книг за
+					назвою, за ПІБ автора, за видавництвом.</a>
 			</li>
 			<li>
-				<a target="_blank" href="./tasks/task05.html">Задача 5. .</a>
+				<a target="_blank" href="./tasks/task05.html">Задача 5. Дано два класи MultChecker (клас для перевірки таблиці
+					множення - рандомно генеруються числа, які треба перемножати), AddChecker (клас для перевірки додавання -
+					рандомно генеруються числа у заданому діапазоні, які треба додавати).</a>
 			</li>
 		</ol>
 	</div>
