--- a/lesson17/tasks/task05.html
+++ b/lesson17/tasks/task05.html
@@ -75,8 +75,149 @@
 </head>
 <body>
 	<div class="container">
-		<h1>Задача 5.</h1>
+		<h1>Задача 5.Дано два класи MultChecker(клас для перевірки таблиці множення - рандомно генеруються числа, які треба
+			перемножати), AddChecker(клас для перевірки додавання - рандомно генеруються числа у заданому діапазоні, які треба
+			додавати).Обидва класи надсилають результати тестування об'єкту класу Hystory, який зберігає історію тестування у
+			масиві у вигляді об'єктів.</h1>
 		<script>
+			// Задача 5.Дано два класи MultChecker(клас для перевірки таблиці множення - рандомно генеруються числа, які треба перемножати), AddChecker(клас для перевірки додавання - рандомно генеруються числа у заданому діапазоні, які треба додавати).Обидва класи надсилають результати тестування об'єкту класу Hystory, який зберігає історію тестування у масиві у вигляді об'єктів
+			// 			Приклад.
+			// 				testsList = [
+			// 					{ firstNum: 1, secondNum: 5, opration:’*’, userAnswer: 7, correctAnswer: 5},
+			// 					{ firstNum: 3, secondNum: 4, opration:’+’, userAnswer: 7, correctAnswer: 7},
+			// 				]
+			// Можна створити окремий клас TestData, який описує один такий тест і у якому будуть ці поля.
+			// Розробити клас TestManager, який використовуючи ці класи за допомогою таймера періодично генерує якісь N задач(рандомно вибираємо, що опитувати: додавання чи множення) і проводить опитування.Результати тестування додаються в об’єкт History. Зробити так, щоб об'єкт такого класу можна було створити тільки один. Коли зроблено ці N задач вивести усю історію на екран.
+			// MultChecker
+			//рандомно генеруються числа, які треба перемножати
+			// AddChecker
+			// рандомно генеруються числа у заданому діапазоні, які треба додавати
+			// Обидва класи надсилають результати тестування об'єкту класу History
+			// History який зберігає історію тестування у масиві у вигляді об'єктів
+			// TestData, який описує один такий тест і у якому будуть ці поля.
+			// Розробити клас TestManager
+			// за допомогою таймера періодично генерує якісь N задач(рандомно вибираємо, що опитувати: додавання чи множення) і проводить опитування.
+			// Результати тестування додаються в об’єкт History.
+			//об'єкт такого класу можна було створити тільки один
+			// Коли зроблено ці N задач вивести усю історію на екран.
+			// 
+			class TestData {
+				constructor(testData) {
+					Object.assign(this, testData)
+				}
+				toString() {
+					return `Test - first number: ${this.firstNumber}, second number: ${this.secondNumber}, operation: ${this.operation}, userAnswer:  ${this.userAnswer}, correctAnswer: ${this.correctAnswer}.`
+				}
+			}
+			// MultChecker
+			class MultChecker {
+				constructor(minNumber = 1, maxNumber = 9) {
+					this.minNumber = minNumber
+					this.maxNumber = maxNumber
+				}
+				getRandomNumber(minNumber, maxNumber) {
+					minNumber ??= this.minNumber
+					maxNumber ??= this.maxNumber
+					return (minNumber + Math.floor(Math.random() * maxNumber - minNumber + 1))
+				}
+				test() {
+					let firstNumber = this.getRandomNumber()
+					let secondNumber = this.getRandomNumber()
+					let correctAnswer = firstNumber * secondNumber
+					let userAnswer = parseInt(prompt(`${firstNumber} * ${secondNumber} = `))
+
+					if (userAnswer === correctAnswer) alert('Correct answer')
+					else alert('Incorrect answer')
+					return new TestData({
+						firstNumber,
+						secondNumber,
+						operation: '*',
+						userAnswer,
+						correctAnswer,
+					})
+				}
+			}
+			// AddChecker
+			class AddChecker {
+				constructor(minNumber = 0, maxNumber = 9) {
+					this.minNumber = minNumber
+					this.maxNumber = maxNumber
+				}
+				getRandomNumber(minNumber, maxNumber) {
+					minNumber ??= this.minNumber
+					maxNumber ??= this.maxNumber
+					return (minNumber + Math.floor(Math.random() * maxNumber - minNumber + 1))
+				}
+				test() {
+					let firstNumber = this.getRandomNumber()
+					let secondNumber = this.getRandomNumber()
+					let correctAnswer = firstNumber + secondNumber
+					let userAnswer = parseInt(prompt(`${firstNumber} + ${secondNumber} = `))
+
+					if (userAnswer === correctAnswer) alert('Correct answer')
+					else alert('Incorrect answer')
+					return new TestData({
+						firstNumber,
+						secondNumber,
+						operation: '+',
+						userAnswer,
+						correctAnswer,
+					})
+				}
+			}
+			//History
+			class History {
+				constructor() {
+					this.testList = []
+				}
+				addNewTest(testObject) {
+					this.testList.push(new TestData(testObject))
+				}
+				printTestList() {
+					for (const test of this.testList) {
+						document.write(test + '<br>')
+					}
+				}
+			}
+			//TestManager
+			class TestManager {
+				static #testManagerRef
+				constructor(totalTestCount, testInterval, minNumber = 0, maxNumber = 9) {
+					if (TestManager.#testManagerRef)
+						return TestManager.#testManagerRef
+
+					this.totalTestCount = totalTestCount
+					this.testInterval = testInterval
+					this.doneTestsNumber = 0
+					this.multChecker = new MultChecker()
+					this.addChecker = new AddChecker(minNumber, maxNumber)
+					this.history = new History()
+
+					TestManager.#testManagerRef = this
+				}
+				doTest() {
+					let testResult
+					if (Math.random() > 0.5) testResult = this.multChecker.test()
+					else testResult = this.addChecker.test()
+
+					this.history.addNewTest(testResult)
+					this.doneTestsNumber++
+					if (this.doneTestsNumber < this.totalTestCount)
+						setTimeout(() => {
+							this.doTest()
+						}, this.testInterval)
+					else this.history.printTestList()
+				}
+				run() {
+					setTimeout(() => {
+						this.doTest()
+					}, this.testInterval)
+				}
+			}
+
+			let newTest = new TestManager(10, 3000, 1, 500)
+
+			newTest.doTest()
 		</script>
 	</div>
 </body>
