--- a/lesson18/index.html
+++ b/lesson18/index.html
@@ -76,25 +76,35 @@
 		<h1>Домашні завдання (Урок 18).</h1>
 		<ol>
 			<li>
-				<a target="_blank" href="./tasks/task01.html"></a>
+				<a target="_blank" href="./tasks/task01.html">Задача 1. Розробити калькулятор.</a>
 			</li>
 			<li>
-				<a target="_blank" href="./tasks/task02.html"></a>
+				<a target="_blank" href="./tasks/task02.html">Задача 2. Зробити конвертер валют (курси валют – константи у
+					скрипті).</a>
 			</li>
 			<li>
-				<a target="_blank" href="./tasks/task03.html"></a>
+				<a target="_blank" href="./tasks/task03.html">Задача 3. Користувач задає рік народження. Визначити кількість
+					років користувача.</a>
 			</li>
 			<li>
-				<a target="_blank" href="./tasks/task04.html"></a>
+				<a target="_blank" href="./tasks/task04.html">Задача 4. Наперед задано у скрипті масив зі списком бажань. Після
+					завантаження сторінки випадковим чином вибираються 3 і відображаються у окремих div (їх треба створити і
+					додати на сторінку)</a>
 			</li>
 			<li>
-				<a target="_blank" href="./tasks/task05.html"></a>
+				<a target="_blank" href="./tasks/task05.html">Задача 5. Користувач задає кількість рядків і стовпців.
+					Відобразити таблицю, у клітинках якої знаходяться числа 1, 2, 3,…</a>
 			</li>
 			<li>
-				<a target="_blank" href="./tasks/task06.html"></a>
+				<a target="_blank" href="./tasks/task06.html">Задача 6. Користувач задає кількість оцінок і натискає на кнопку
+					«get table». В результаті формується таблиця з input, куди користувач вводить оцінки. Після цього натискає на
+					кнопку “get sum” і знаходить середнє значення.</a>
 			</li>
 			<li>
-				<a target="_blank" href="./tasks/task07.html"></a>
+				<a target="_blank" href="./tasks/task07.html">Задача 7. Подорож складається з 3 етапів. На кожному етапі
+					користувач може вибрати один з видів транспорту (авто, автобус, літак - випадаючий список), харчування
+					(сніданок, обід, вечеря – checkbоx) та одного з 3-х гідів(використати - radio buttons). Ціни визначте самі.
+					Підрахувати загальну вартість.</a>
 			</li>
 		</ol>
 	</div>
