--- a/lesson18/tasks/task05.html
+++ b/lesson18/tasks/task05.html
@@ -15,15 +15,14 @@
 			border: none;
 		}
 
-		a {
-			color: inherit;
-			text-decoration: none;
-			color: #7289da;
-			transition: color 0.3s ease 0s;
-		}
-
-		a:hover {
-			color: #99aab5;
+		body {
+			font-family: Arial, Helvetica, sans-serif;
+			line-height: 1;
+			background-color: #23272a;
+			color: #fff;
+			padding-top: 10px;
+			padding-bottom: 10px;
+			font-size: 20px;
 		}
 
 		h1,
@@ -49,14 +48,11 @@
 			height: 100%;
 		}
 
-		body {
-			font-family: Arial, Helvetica, sans-serif;
-			line-height: 1;
-			background-color: #23272a;
-			color: #fff;
-			padding-top: 10px;
-			padding-bottom: 10px;
-			font-size: 20px;
+		.container {
+			max-width: 1100px;
+			margin: 0 auto;
+			padding-left: 15px;
+			padding-right: 15px;
 		}
 
 		div:not(:last-child),
@@ -65,17 +61,66 @@
 			margin-bottom: 15px;
 		}
 
-		.container {
-			max-width: 1100px;
-			margin: 0 auto;
-			padding-left: 15px;
-			padding-right: 15px;
+		table {
+			width: 100%;
+			text-align: center;
+		}
+
+		table,
+		td {
+			border: 2px solid purple;
+			border-collapse: collapse;
 		}
 	</style>
+	<script>
+		function createCounter(value) {
+			function counter() {
+				return ++value
+			}
+			return counter
+		}
+
+		function createTable() {
+			const userRows = parseInt(document.getElementById('rows').value)
+			const userColumns = parseInt(document.getElementById('columns').value)
+
+			let counter = createCounter(0)
+
+			const tableContainer = document.getElementById('user-table')
+
+			const tableEl = document.createElement('table')
+			for (let rows = 0; rows < userRows; rows++) {
+				const trEl = document.createElement('tr')
+				for (let columns = 0; columns < userColumns; columns++) {
+					const tdEl = document.createElement('td')
+					tdEl.innerText = counter()
+					trEl.append(tdEl)
+				}
+				tableEl.append(trEl)
+			}
+			tableContainer.append(tableEl)
+		}
+		window.onload = function () {
+			document.getElementById('btn').onclick = createTable
+		}
+	</script>
 </head>
 <body>
 	<div class="container">
-		<h1></h1>
+		<h1>Задача 5. Користувач задає кількість рядків і стовпців. Відобразити таблицю, у клітинках якої знаходяться числа
+			1, 2, 3,...</h1>
+		<div class="user-rows">
+			<label for="user-rows">Введіть кількість рядків</label>
+			<input type="number" value="" id="rows">
+		</div>
+		<div class="user-columns">
+			<label for="user-columns">Введіть кількість стовпців</label>
+			<input type="number" value="" id="columns">
+		</div>
+		<div class="user-action">
+			<button id="btn">Генерувати таблицю</button>
+		</div>
+		<div id="user-table"></div>
 	</div>
 </body>
 </html>
