--- a/lesson18/tasks/task06.html
+++ b/lesson18/tasks/task06.html
@@ -71,11 +71,97 @@
 			padding-left: 15px;
 			padding-right: 15px;
 		}
+
+		table {
+			width: 100%;
+			text-align: center;
+		}
+
+		table,
+		td {
+			border: 2px solid #fff;
+			border-collapse: collapse;
+		}
+
+		td>input {
+			width: 95%;
+			height: 20px;
+		}
 	</style>
+	<script>
+		function showAverageGrade(gradeList, sum) {
+			const average = sum / gradeList.length
+			const resultEl = document.getElementById('average-result')
+			resultEl.innerText = `Середня оцінка ${average.toFixed(2)}`
+		}
+
+		function getSum() {
+			const gradesList = document.querySelectorAll('.grade-input')
+
+			let sum = 0
+			for (const grade of gradesList) {
+				sum += parseInt(grade.value)
+			}
+
+			showAverageGrade(gradesList, sum)
+
+			return sum
+		}
+
+		function crateInput() {
+			const input = document.createElement('input')
+			input.setAttribute('type', 'numper')
+			input.className = 'grade-input'
+			return input
+		}
+
+		function createTable() {
+			const userGrades = parseInt(document.getElementById('grades').value)
+
+			const tableContainer = document.getElementById('user-table')
+
+			const tableEl = document.createElement('table')
+
+			let i = 0
+
+			while (i !== userGrades) {
+				const trEl = document.createElement('tr')
+				for (let columns = 0; columns < 2; columns++) {
+					if (i === userGrades) break
+					const tdEl = document.createElement('td')
+					const input = crateInput()
+					tdEl.append(input)
+					trEl.append(tdEl)
+					i++
+				}
+				tableEl.append(trEl)
+			}
+			tableContainer.append(tableEl)
+		}
+		window.onload = function () {
+			document.getElementById('table-btn').onclick = createTable
+			document.getElementById('average-btn').onclick = getSum
+		}
+	</script>
 </head>
 <body>
 	<div class="container">
-		<h1></h1>
+		<h1>Задача 6. Користувач задає кількість оцінок і натискає на кнопку «get table». В результаті формується таблиця з
+			input, куди користувач вводить оцінки. Після цього натискає на кнопку “get sum” і знаходить середнє значення.</h1>
+		<div class="grade-number">
+			<label for="">Введіть кількість оцінок</label>
+			<input type="number" value="" id="grades">
+		</div>
+		<div class="user-action">
+			<button id="table-btn">Get table</button>
+		</div>
+		<hr>
+		<div id="user-table"></div>
+		<hr>
+		<div class="user-action">
+			<button id="average-btn">Get sum</button>
+		</div>
+		<div id="average-result"></div>
 	</div>
 </body>
 </html>
